--- a/less/sequences.less
+++ b/less/sequences.less
@@ -343,6 +343,7 @@
     }
   }
 }
-.sequence-inverse > li > .sequence-table-th {
-  color: @brand-white;
+.sequence-inverse > li > .sequence-table-th,
+.sequence-inverse > li > .sequence-table-td {
+  color: @brand-smoke-plus-10;
 }
