--- a/less/sequences.less
+++ b/less/sequences.less
@@ -27,16 +27,6 @@
     font-size: @font-size-base;
   }
 
-  &:before {
-    content: " ";
-    width: @sequence-line-width;
-    left: 0;
-    position: absolute;
-    border-width: (@sequence-line-width / 2);
-    border-style: solid;
-    border-color: inherit;
-  }
-
   > li {
     display: block;
     line-height: @sequence-step-height;
@@ -126,6 +116,12 @@
     &:before {
       border-color: @link-color;
     }
+    &:after {
+      width: 2px;
+      height: 100% !important;
+      border: 0;
+      background-color: @sequence-border;
+    }
     &:first-child:after {
       height: 0;
       border-width: 0;
@@ -181,41 +177,37 @@
   }
 }
 
-.sequence-info > li {
-  border-color: @state-info-border;
-  &.active:before {
-    border-color: @state-info-border;
-    background-color: @state-info-border;
-  }
+.sequence-info {
+  .sequence-variant(
+    @state-info-border, 16px, 24px,
+    @sequence-border, @sequence-inverse-border, @sequence-margin-lg
+  );
 }
-.sequence-primary > li {
-  border-color: @brand-navy;
-  &.active:before {
-    border-color: @brand-navy;
-    background-color: @brand-navy;
-  }
+.sequence-primary {
+  .sequence-variant(
+    @brand-navy, 16px, 24px,
+    @sequence-border, @sequence-inverse-border, @sequence-margin-lg
+  );
 }
-.sequence-success > li {
-  border-color: @state-success-border;
-  &.active:before {
-    border-color: @state-success-border;
-    background-color: @state-success-border;
-  }
+.sequence-success {
+  .sequence-variant(
+    @state-success-border, 16px, 24px,
+    @sequence-border, @sequence-inverse-border, @sequence-margin-lg
+  );
 }
-.sequence-warning > li {
-  border-color: @state-warning-border;
-  &.active:before {
-    border-color: @state-warning-border;
-    background-color: @state-warning-border;
-  }
+.sequence-warning {
+  .sequence-variant(
+    @state-warning-border, 16px, 24px,
+    @sequence-border, @sequence-inverse-border, @sequence-margin-lg
+  );
 }
-.sequence-danger > li {
-  border-color: @state-danger-border;
-  &.active:before {
-    border-color: @state-danger-border;
-    background-color: @state-danger-border;
-  }
+.sequence-danger {
+  .sequence-variant(
+    @state-danger-border, 16px, 24px,
+    @sequence-border, @sequence-inverse-border, @sequence-margin-lg
+  );
 }
+
 
 .sequence-hollow {
   > li:before {
@@ -276,6 +268,7 @@
 
 .sequence-table {
   display: table;
+
   > li {
     display: table-row;
     > a {
@@ -318,6 +311,33 @@
         padding-bottom: (@sequence-margin - 1);
       }
     }
+  }
+
+  @pip-offset-table: ((@sequence-step-height / 2) + @sequence-margin);
+  @space-outside-pips-table: ((@sequence-margin * 2) + @sequence-step-height);
+  // Sequence table uses a different approach to the left hand line.
+  &:before {
+    content: " ";
+    width: @sequence-line-width;
+    left: 0;
+    position: absolute;
+    border-width: (@sequence-line-width / 2);
+    border-style: solid;
+    border-color: inherit;
+
+    height: ~"calc(100% - @{space-outside-pips-table})";
+    margin-top: @pip-offset-table;
+    display: block;
+  }
+  &.sequence-top:before {
+    height: ~"calc(100% - @{pip-offset-table})";
+    margin-top: 0;
+  }
+  &.sequence-bottom:before {
+    height: ~"calc(100% - @{pip-offset-table})";
+  }
+  &.sequence-top.sequence-bottom:before {
+    height: 100%;
   }
 }
 .sequence-inverse > li > .sequence-table-th,
