--- a/less/mixins/sequence.less
+++ b/less/mixins/sequence.less
@@ -138,12 +138,15 @@
     &:first-child:after {
       background: @sequence-border;
     }
+    &:last-child:after {
+      background: @color;
+    }
   }
   &.sequence-inverse > .active {
     &:after {
       background: linear-gradient(@color 0, @color @pip-offset-sm, @sequence-inverse-border @pip-offset-sm, @sequence-inverse-border 100%);
       @media (min-width: @screen-md-min) {
-        background: linear-gradient(@color 0, @color @pip-offset-md, @sequence-border @pip-offset-md, @sequence-border 100%);
+        background: linear-gradient(@color 0, @color @pip-offset-md, @sequence-inverse-border @pip-offset-md, @sequence-inverse-border 100%);
       }
     }
   }
